yamls/jackett/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
spec:
  selector:
    app: jackett
  ports:
    - protocol: TCP
      port: 9117
      name: http
